--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -5,17 +5,17 @@
         </button>
         <h4 id="CC-title" class="modal-title"></h4>
     </div>
-    
-  <div class="box" style="border-radius:0px; border-top:0px; margin-bottom:0px; ">
+
+  <div class="box term-prompt" style="border-radius:0px; border-top:0px; margin-bottom:0px; ">
       <small class="warn-i" style="position: absolute; width: 100%; border-bottom: 1px solid #e5e5e5; padding-left: 15px; height: 24px; line-height: 24px;">
         <i class="fa fa-warning"></i>
         &nbsp;此窗口是对该分类下所有终端的统一配置
       </small>
       <div class="replace24"></div>
-    
-      <div class="modal-body" style="height:400px; overflow:auto;">
-          <div class="form-group">   
-              <label style="color: #72afd2;">基本信息</label>
+
+      <div class="modal-body term-config" style="height:400px; overflow:auto;">
+          <div class="form-group">
+              <label class="lbl-basicInfo" style="color: #72afd2;">基本信息</label>
           </div>
           <form class="form-horizontal">
               <div class="form-group">
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">预下发频道</label>
+                <label class="col-sm-3 control-label lbl-preLssued">预下发频道</label>
                 <div class="col-sm-9">
                   <div class="checkbox">
                       <label id="CC-PreChannel" style="padding-left: 0; cursor: default;"></label>
@@ -37,23 +37,23 @@
           </form>
           <hr>
           <div class="form-group">
-              <label style="color: #72afd2;">配置信息</label>
-          </div> 
+              <label class="lbl-CFInfo" style="color: #72afd2;">配置信息</label>
+          </div>
           <form class="form-horizontal">
               <div class="form-group">
-                <label class="col-sm-3 control-label">升级服务器</label>
+                <label class="col-sm-3 control-label lbl-updateServer">升级服务器</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control" id="CC-upgradeURL" placeholder="升级服务器地址">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">日志服务器</label>
+                <label class="col-sm-3 control-label lbl-logServer">日志服务器</label>
                 <div class="col-sm-9">
                   <input type="text" class="form-control" id="CC-logURL" placeholder="日志服务器地址">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">音量</label>
+                <label class="col-sm-3 control-label lbl-volume">音量</label>
                 <div class="col-sm-8">
                   <input id="CC-vol-slider" type="text" value="" class="slider form-control" data-slider-id="green">
                 </div>
@@ -61,14 +61,14 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">城市</label>
+                <label class="col-sm-3 control-label lbl-city">城市</label>
                 <div class="col-sm-9">
                   <select id="CC-city" class="form-control select2" multiple="multiple" data-placeholder="请选择城市（终端将会显示所选城市的天气信息）" style="width: 100%;">
                   </select>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">工作区间</label>
+                <label class="col-sm-3 control-label lbl-work">工作区间</label>
                 <div class="col-sm-9">
                     <input id="CC-workSwitch" type="checkbox" checked>
                 </div>
@@ -78,33 +78,33 @@
                   <div  class="checkbox">
                       <label style="padding-left: 0; ">
                           <input type="checkbox">
-                          周一
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周二
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周三
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周四
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周五
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周六
-                      </label> 
-                      <label style="padding-left: 0; ">
-                          <input type="checkbox">
-                          周日
+                          <span>周一</span>
                       </label>
-                  </div>  
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周二</span>
+                      </label>
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周三</span>
+                      </label>
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周四</span>
+                      </label>
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周五</span>
+                      </label>
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周六</span>
+                      </label>
+                      <label style="padding-left: 0; ">
+                          <input type="checkbox">
+                          <span>周日</span>
+                      </label>
+                  </div>
                 </div>
               </div>
               <div class="form-group" id="CC-workArea">
@@ -114,7 +114,7 @@
                           <i class="fa fa-clock-o"></i>
                       </div>
                       <input type="text" class="form-control" id="CC-workStart" style="display: inline-block; width: 120px;">
-                  </div>  
+                  </div>
                   <div style="float: left; width:30px; text-align: center; height: 34; line-height: 34px;">
                       －
                   </div>
@@ -123,11 +123,11 @@
                           <i class="fa fa-clock-o"></i>
                       </div>
                       <input type="text" class="form-control" id="CC-workEnd" style="display: inline-block; width: 120px;">
-                  </div>   
+                  </div>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">下载区间</label>
+                <label class="col-sm-3 control-label lbl-download">下载区间</label>
                 <div class="col-sm-9">
                     <input id="CC-downloadSwitch" type="checkbox" checked>
                 </div>
@@ -148,14 +148,14 @@
                           <i class="fa fa-clock-o"></i>
                       </div>
                       <input type="text" class="form-control" id="CC-downloadEnd" style="display: inline-block; width: 120px;">
-                  </div> 
-                  <div style="float: left; width:70px; text-align: center; height: 34; line-height: 34px;">
+                  </div>
+                  <div class="CC-prompt-day" style="float: left; width:70px; text-align: center; height: 34; line-height: 34px;">
                       （每天）
                   </div>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-sm-3 control-label">定时重启</label>
+                <label class="col-sm-3 control-label lbl-timeRestart">定时重启</label>
                 <div class="col-sm-9">
                     <input id="CC-restartSwitch" type="checkbox" checked>
                     <div id="CC-restartArea">
@@ -166,7 +166,7 @@
                                 </div>
                                 <input type="text" class="form-control" id="CC-restartTime" style="display: inline-block; width: 113px;">
                             </div>
-                            <div style="float: left; width:70px; text-align: center; height: 34px; line-height: 34px;">
+                            <div class="CC-prompt-day" style="float: left; width:70px; text-align: center; height: 34px; line-height: 34px;">
                                 （每天）
                             </div>
                         </div>
@@ -176,7 +176,7 @@
 
 
               <div class="form-group">
-                  <label class="col-sm-3 control-label">屏幕旋转</label>
+                  <label class="col-sm-3 control-label lbl-rotate">屏幕旋转</label>
                   <div class="col-sm-9">
                       <input id="CC-rotate" type="checkbox" checked>
                       <div id="CC-rotateArea">
@@ -198,7 +198,7 @@
                   </div>
               </div>
               <div class="form-group">
-                  <label class="col-sm-3 control-label">屏幕输出模式</label>
+                  <label class="col-sm-3 control-label lbl-outputMode">屏幕输出模式</label>
                   <div class="col-sm-9">
                       <input id="CC-outputMode" type="checkbox" checked>
                       <div id="CC-outputModeArea">
@@ -221,26 +221,26 @@
                   </div>
               </div>
               <div class="form-group">
-                  <label class="col-sm-3 control-label">远程调试ADB</label>
+                  <label class="col-sm-3 control-label lbl-remoteADB">远程调试ADB</label>
                   <div class="col-sm-9">
                       <input id="CC-remoteADB" type="checkbox" checked>
                   </div>
               </div>
               <div class="form-group">
-                  <label class="col-sm-3 control-label">打印本地日志</label>
+                  <label class="col-sm-3 control-label lbl-debug">打印本地日志</label>
                   <div class="col-sm-9">
                       <input id="CC-debug" type="checkbox" checked>
                   </div>
               </div>
-          </form>    
+          </form>
       </div>
       <div class="modal-footer">
           <button id="CC-save" type="button" class="btn btn-primary pull-right">保存</button>
       </div>
       <div id="CC_waiting" class="overlay" style="display:none; text-align:center; padding-top: 35%;">
-        配置保存中，终端数量较多，请等待...
+          配置保存中，终端数量较多，请等待...
       </div>
-    </div>  
+    </div>
 </div>
 <script>
     seajs.use("pages/terminal/configTermClass.js", function (configClass) {
