--- a/resources/pages/termlog/list.html
+++ b/resources/pages/termlog/list.html
@@ -1,10 +1,9 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>
+    <h1 class="termLog-title">
         日志
-        <small></small>
     </h1>
-    <small class="tips" style="position: absolute; top:22px; right: 16px; font-size: 12px;"><i class="fa fa-info-circle"></i>&nbsp;终端MAC信息可以在 控制台->终端 里找到。</small>
+    <small class="tips termlog-title-right" style="position: absolute; top:22px; right: 16px; font-size: 12px;"><i class="fa fa-info-circle"></i>&nbsp;终端MAC信息可以在 控制台->终端 里找到。</small>
 </section>
 
 <!-- Main content -->
