--- a/resources/pages/channel/mtrBatchOperation.html
+++ b/resources/pages/channel/mtrBatchOperation.html
@@ -26,7 +26,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-            <small class="tips" style="font-size: 12px; margin: 10px 15px;"><i class="fa fa-info-circle" >&nbsp视频和音频、Office、PDF资源无法修改时长。</i></small>
+            <small class="tips batchOperation-prompt" style="font-size: 12px; margin: 10px 15px;"><i class="fa fa-info-circle" >&nbsp视频和音频、Office、PDF资源无法修改时长。</i></small>
             <button type="submit" class="btn btn-primary pull-right" id="btn-batchSubmit">提交</button>
         </div>
         <!-- /.box-footer -->
