--- a/resources/pages/channel/list_check.html
+++ b/resources/pages/channel/list_check.html
@@ -1,5 +1,5 @@
 <section id="channel-list-nav" class="content-header row">
-	<h1>频道列表</h1>
+	<h1 class="channel-check-title">频道列表</h1>
 	<div class="input-group input-group-sm col-sm-2 search-container">
 		<input type="text" class="form-control">
 		<span class="input-group-btn">
