--- a/resources/pages/channel/published_detail.html
+++ b/resources/pages/channel/published_detail.html
@@ -10,18 +10,18 @@
 
             <div class="modal-body" style="overflow:auto; max-height: 430px;">
                 <div class="form-group" style="overflow:auto;">
-                    <label>终端分类：</label>
+                    <label id="lbl_termList">终端分类：</label>
                     <p id="termList" class="margin">全部，xx，xx</p>
                 </div>
                 <div class="form-group">
-                    <label>终端：</label>
+                    <label id="lbl_term">终端：</label>
                     <p id="term" class="margin">全部，xx，xx</p>
                 </div>
 
             </div>
             <div class="modal-footer" style="border: none">
                 <!--<button type="button" class="btn btn-default pull-left CA_close" data-dismiss="modal">返回</button>-->
-                <button id="chnSubmit" type="button" class="btn btn-primary pull-right">确定</button>
+                <button id="chnSubmit" type="button" class="btn btn-primary pull-right">提交</button>
             </div>
         </div>
         <!-- /. box -->
