--- a/resources/pages/materials/materials_addLive.html
+++ b/resources/pages/materials/materials_addLive.html
@@ -6,13 +6,13 @@
     </div>
     <div class="modal-body">
         <div class="form-group">
-            <label>直播源名称：</label>
-            <input type="text" class="form-control" id="ULmtr_name" placeholder="请输入直播源名称">
+            <label id="lbl_name">直播源名称：</label>
+            <input type="text" class="form-control" id="ULmtr_name">
         </div>
         <div class="form-group">
-            <label>直播源地址：</label>
-            <input type="text" class="form-control" id="ULmtr_address" placeholder="请输入直播源地址">
-            <small class="tips"><i class="fa fa-info-circle" >&nbsp例:http://tv.cctv.com/live/cctv1.m3u8</i></small>
+            <label id="lbl_url">直播源地址：</label>
+            <input type="text" class="form-control" id="ULmtr_address">
+            <small class="tips"><i class="fa fa-info-circle" >&nbsp;e.q:http://tv.cctv.com/live/cctv1.m3u8</i></small>
         </div>
     </div>
     <div class="modal-footer">
