--- a/resources/pages/materials/materials_addURL.html
+++ b/resources/pages/materials/materials_addURL.html
@@ -6,13 +6,13 @@
     </div>
     <div class="modal-body">
         <div class="form-group">
-            <label>名称：</label>
-            <input type="text" class="form-control" id="ULmtr_name" placeholder="请输入名称">
+            <label id="lbl_name">名称：</label>
+            <input type="text" class="form-control" id="ULmtr_name">
         </div>
         <div class="form-group">
-            <label>网页地址：</label>
-            <input type="text" class="form-control" id="ULmtr_address" placeholder="请输入网页地址">
-            <small class="tips"><i class="fa fa-info-circle" >&nbsp例:http://www.baidu.com</i></small>
+            <label id="lbl_webUrl">网页地址：</label>
+            <input type="text" class="form-control" id="ULmtr_address">
+            <small class="tips"><i class="fa fa-info-circle" >&nbsp;e.q:http://www.baidu.com</i></small>
         </div>
     </div>
     <div class="modal-footer">
