--- a/resources/pages/materials/materials_preview.html
+++ b/resources/pages/materials/materials_preview.html
@@ -6,7 +6,7 @@
                 <embed src="" style="width:100%; height:100%;">
             </object>
         </video>
-        <a class="mtrView_close">关闭</a>
+        <a class="mtrView_close">&times;</a>
     </article>
 
     <article id="mtrView_audioArea" class="mtrView" name="media">
@@ -16,17 +16,17 @@
                 <embed src="" style="width:100%; height:100%;">
             </object>
         </audio>
-        <a class="mtrView_close">关闭</a>
+        <a class="mtrView_close">&times;</a>
     </article>
 
     <article id="mtrView_picArea" class="mtrView">
         <img style="height: 100%; margin: 0 auto; display: block; max-width: 100%;" src=""/>
-        <a class="mtrView_close">关闭</a>
+        <a class="mtrView_close">&times;</a>
     </article>
 
     <article id="mtrView_officeArea" class="mtrView">
         <!--<img style="height: 100%; margin: 0 auto; display: block; max-width: 100%;" src="" />-->
-        <a class="mtrView_close">关闭</a>
+        <a class="mtrView_close">&times;</a>
         <div id="mtrViewCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
 
