--- a/resources/pages/materials/materials_edit.html
+++ b/resources/pages/materials/materials_edit.html
@@ -2,12 +2,12 @@
     <div class="modal-header">
         <button type="button" class="close CA_close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">资源编辑</h4>
+        <h4 class="modal-title resourceTitle"></h4>
     </div>
     <div class="modal-body">
         <div class="form-group">
-            <label>资源名称：</label>
-            <input type="text" class="form-control" id="Emtr_name" placeholder="请输入资源名称">
+            <label id="lbl_resourceName">资源名称：</label>
+            <input type="text" class="form-control" id="Emtr_name">
         </div>
     </div>
     <div class="modal-footer">
