--- a/resources/pages/user/roles_assign.html
+++ b/resources/pages/user/roles_assign.html
@@ -1,4 +1,5 @@
-<div id="rolesAsg_box" class="modal-content" style="position:relative; margin: auto; margin-left: -300px; width:600px; max-height: 560px; left:50%;">
+<div id="rolesAsg_box" class="modal-content"
+     style="position:relative; margin: auto; margin-left: -300px; width:600px; max-height: 560px; left:50%;">
     <div class="modal-header">
         <button type="button" class="close CA_close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span></button>
@@ -7,19 +8,19 @@
     <div class="modal-body">
         <div class="form-group">
             <div class="table-responsive mailbox-messages">
-                        <!-- 用户列表 -->
-                        <table id="usersTable" class="table table-hover table-striped">
-                            <tbody>
+                <!-- 用户列表 -->
+                <table id="usersTable" class="table table-hover table-striped">
+                    <tbody>
 
-                            </tbody>
-                        </table>
-                        <!-- /.table -->
+                    </tbody>
+                </table>
+                <!-- /.table -->
             </div>
             <div class="box-footer no-padding text-center">
-                    <!-- 翻页 -->
-                    <ul id="users-table-pager" class="pagination">
-                    </ul>
-            </div>           
+                <!-- 翻页 -->
+                <ul id="users-table-pager" class="pagination">
+                </ul>
+            </div>
         </div>
     </div>
     <div class="modal-footer">
