--- a/resources/pages/user/roles_list.html
+++ b/resources/pages/user/roles_list.html
@@ -1,6 +1,6 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>
+    <h1 id="roleTitle">
         角色权限
     </h1>
 </section>
@@ -28,7 +28,7 @@
                         <!-- /.pull-right -->
                     <!-- </div> -->
                     <div class="table-responsive mailbox-messages">
-                        <!-- 资源列表 -->
+                        <!-- 角色列表 -->
                         <table id="rolesTable" class="table table-hover table-striped">
                             <tbody>
 
@@ -51,9 +51,6 @@
         <!-- /.col -->
     </div>
     <!-- /.row -->
-
-    <!-- upload按钮-->
-    <input id="file" name="file" type="file" multiple="multiple" accept="image/*, audio/*, video/*"/>
 </section>
 <!-- /.content -->
 <script>
