--- a/resources/pages/user/users_list.html
+++ b/resources/pages/user/users_list.html
@@ -1,8 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>
+    <h1 id="userTitle">
         用户管理
-        <!-- <small>Users list</small> -->
     </h1>
 </section>
 
@@ -15,7 +14,6 @@
                     <div class="btn-group">
                    		<button id="user_add" type="button" class="btn btn-default btn-sm">
                             <i class="fa fa-user-plus"></i>
-                            创建新用户
                         </button>
                     </div>
                     <!-- /.box-tools -->
@@ -45,9 +43,6 @@
         <!-- /.col -->
     </div>
     <!-- /.row -->
-
-    <!-- upload按钮-->
-    <input id="file" name="file" type="file" multiple="multiple" accept="image/*, audio/*, video/*"/>
 </section>
 <!-- /.content -->
 <script>
