--- a/resources/pages/userlog/list.html
+++ b/resources/pages/userlog/list.html
@@ -1,8 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
-    <h1>
+    <h1 id="operationLogTitle">
         操作日志
-        <small></small>
     </h1>
 </section>
 
@@ -12,13 +11,13 @@
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 id="userlogLisTitle" class="box-title"></h3>   
+                    <h3 id="userlogLisTitle" class="box-title"></h3>
                     <div class="box-tools pull-right">
                         <div class="has-feedback">
                             <input id="userlogSearch" type="text" class="form-control input-sm" placeholder="关键词搜索">
                             <span class="glyphicon glyphicon-search form-control-feedback"></span>
                         </div>
-                    </div>  
+                    </div>
                     <!-- /.box-tools -->
                 </div>
                 <!-- /.box-header -->
@@ -46,9 +45,6 @@
         <!-- /.col -->
     </div>
     <!-- /.row -->
-
-    <!-- upload按钮-->
-    <input id="file" name="file" type="file" multiple="multiple" accept="image/*, audio/*, video/*"/>
 </section>
 <!-- /.content -->
 <script>
